ServiceAPIs/sample-none-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-none-selector
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sample-none-selector
subsets:
  - addresses:
    - ip: 210.236.255.111
    - ip: 10.41.0.107
    - ip: 10.41.0.127
    ports:
    - protocol: TCP
      port: 80
