ServiceAPIs/sample-subdomain.yaml
#例外的なPodの名前解決方法

---
apiVersion: v1
kind: Pod
metadata:
  name: sample-subdomain
  labels:
    app: sample-app
spec:
  hostname: sample-hostname
  subdomain: sample-subdomain
  containers:
  - name: nginx-container
    image: amsy810/tools:v2.0

---

apiVersion: v1
kind: Service
metadata:
  name: sample-subdomain
spec:
  type: ClusterIP
  clusterIP: None
  ports: []
  selector:
    app: sample-app
