ServiceAPIs/sample-ingress-by-nginx.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: sample-ingress-by-nginx
  annotations:
    Kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: sample.example.com
      http:
        paths:
        - path: /path1/*
          backend:
            serviceName: sample-ngress-svc-1
            servicePort: 8888
        - path: /path2/*
          backend:
            serviceName: sample-ngress-svc-2
            servicePort: 8888
  backend: 
    serviceName: sample-ngress-default
    servicePort: 8888
  tls:
  - hosts:
    - sample.example.com
    secretName: tls-sample
